--- a/app/src/main/res/layout/fragment_top_feed.xml
+++ b/app/src/main/res/layout/fragment_top_feed.xml
@@ -5,21 +5,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/feedTv"
+        android:id="@+id/tvTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Feed Fragment"
+        android:text="Top Feed"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/signOutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_out"
-        android:layout_marginTop="@dimen/margin_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
