--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="secondary_dark">#5C7AFF</color>
     <color name="black">#000505</color>
     <color name="white">#FEFCFD</color>
+    <color name="white_transparent">#50FEFCFD</color>
     <color name="snow_white">#FFFAFA</color>
     <color name="grey">#BBBBBB</color>
 </resources>
