DNCGLRY-10 Date Picker

--- a/app/src/main/res/layout/fragment_feed_holder.xml
+++ b/app/src/main/res/layout/fragment_feed_holder.xml
@@ -24,4 +24,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivCalendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvPage"
+        android:layout_marginEnd="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_small"
+        app:srcCompat="@drawable/ic_calendar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
